tests/sksl/errors/IntrinsicInGlobalVariable.glsl
### Compilation failed:

error: 1: global variable initializer must be a constant expression
half4 c = blend_src_over(half4(1), half4(0));
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
